# EvMultiCalib

./: CMakeLists.txt  package.xml  readme.md
config/: event_params.yaml  lidar_params.yaml
include/: calibration.h  event_angular_velocity_estimator.h  lidar_rotation_estimator.h  optimization_cost_functor.h  rgb_rotation_estimator.h  spline.h  utils.h
include/dvs_msg/: EventArray.h
launch/: evMultiCalib.launch
src/: calibration.cpp  ev_angular_velocity_estimator.cpp  event_angular_velocity_estimator.cpp  lidar_rotation_estimator.cpp  normal_flow.cpp  rgb_rotation_estimator.cpp  ros_node.cpp  utils.cpp
src/EvMultiCalib/: CMakeLists.txt
src/EvMultiCalib/config/: calib_params.yaml  rgb_params.yaml
src/EvMultiCalib/launch/: evMultiCalib.launch
src/EvMultiCalib/src/: ev_angular_velocity_estimator.cpp  event_centric_calibration.cpp  rgb_rotation_estimator.cpp
