<?xml version="1.0"?>
<package format="2">
    <name>evMultiCalib</name>
    <version>0.0.0</version>
    <description>The calibration toolbox for event-centric multi-sensor systems.</description>

    <maintainer email="maijy@hnu.edu.cn">Xiuyuan Lu, Jiayao Mai</maintainer>

    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>dvs_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>image_geometry</depend>
    <depend>image_transport</depend>
    <depend>pcl_ros</depend>
    <depend>tf_conversions</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>glog_catkin</depend>

    <export>

    </export>
</package>